--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,32 +5,55 @@
 # They are provided by a third-party and are governed by
 # separate terms of service, privacy policy, and support
 # documentation.
-
-name: Java CI with Maven
+name: Manual CI/CD Pipeline for Maven Project
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-permissions:
-  contents: read
-  security-events: write
-jobs:
-  build:
+  workflow_dispatch:  # Enables manual trigger from GitHub UI
 
+jobs:
+  build-test-deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
+
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+
+    - name: Cache Maven packages
+      uses: actions/cache@v4
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven
+
+    - name: Build and test with Maven
+      run: mvn clean install
+
+    - name: Upload Build Artifact (JAR)
+      uses: actions/upload-artifact@v4
+      with:
+        name: app-jar
+        path: target/*.jar
+
+    - name: Deploy to Remote Server via SSH
+      if: success()
+      env:
+        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+        SERVER_USER: ${{ secrets.SERVER_USER }}
+        SERVER_IP: ${{ secrets.SERVER_IP }}
+      run: |
+        echo "$SSH_PRIVATE_KEY" > private_key && chmod 600 private_key
+        scp -i private_key target/*.jar $SERVER_USER@$SERVER_IP:/home/$SERVER_USER/app.jar
+        ssh -i private_key $SERVER_USER@$SERVER_IP << 'EOF'
+          pkill -f 'java -jar' || true
+          nohup java -jar /home/$SERVER_USER/app.jar > app.log 2>&1 &
+        EOF
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
