--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,7 +19,7 @@ jobs:
       uses: actions/checkout@v4
     - name: Set PowerShell Execution Policy
       run: Set-ExecutionPolicy -ExecutionPolicy RemoteSigned -Scope Process
-      shell: pwsh
+      shell: powershell
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
